sqlite/conformance/sqlite-sqltests/snapshot_tests/subqueries/snapshots/subqueries__cte-materialized-order-multi-col-mixed-clean-flip.snap
---
source: subqueries.sqltest
expression: |-
  WITH ordered AS MATERIALIZED (
          SELECT * FROM t ORDER BY a ASC, b DESC
      )
      SELECT * FROM ordered ORDER BY a DESC, b ASC;
info:
  statement_type: WITH (CTE)
  tables:
  - ordered
  - t
  setup_blocks:
  - multi_col_schema
  database: ':memory:'
---
QUERY PLAN
|--MATERIALIZE ordered
|  |--SCAN t
|  `--USE SORTER FOR ORDER BY
`--SCAN ordered
