sqlite/conformance/sqlite-sqltests/snapshot_tests/subqueries/snapshots/subqueries__cte-multiple-independent.snap
---
source: subqueries.sqltest
expression: |-
  WITH
      expensive_products AS (
          SELECT id, name, price
          FROM products
          WHERE price > 500
      ),
      large_orders AS (
          SELECT id, customer_id, total_amount
          FROM orders
          WHERE total_amount > 1000
      ),
      vip_customers AS (
          SELECT id, name
          FROM customers
          WHERE id IN (SELECT customer_id FROM large_orders)
      )
      SELECT v.name, l.total_amount
      FROM vip_customers v
      JOIN large_orders l ON l.customer_id = v.id;
info:
  statement_type: WITH (CTE)
  tables:
  - customers
  - l.customer_id
  - large_orders
  - orders
  - products
  - vip_customers
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN vip_customers AS v
|  |--LIST SUBQUERY 1
|  |  `--SCAN orders
|  `--SEARCH customers USING INTEGER PRIMARY KEY (rowid=?)
`--SEARCH orders USING INDEX idx_orders_customer (customer_id=?)

BYTECODE
addr  opcode              p1  p2  p3  p4            p5  comment
   0  Init                 0  44   0                 0  Start at 44
   1  InitCoroutine        1  24   2                 0
   2  Once                13   0   0                 0  goto 13
   3  OpenEphemeral        0   0   0                 0  cursor=0 is_table=false
   4  OpenRead             1   4   0  k(4,B,B,B,B)   0  table=orders, root=4, iDb=0
   5  Rewind               1  13   0                 0  Rewind table orders
   6    Column             1   3   4                 0  r[4]=orders.total_amount
   7    RealAffinity       4   0   0                 0
   8    Le                 4   5  12  Binary         0  if r[4]<=r[5] goto 12
   9    Column             1   1   2                 0  r[2]=orders.customer_id
  10    MakeRecord         2   1   6                 0  r[6]=mkrec(r[2..2]); for ephemeral_index_where_sub_t4
  11    IdxInsert          0   6   0                 8  key=r[6]
  12  Next                 1   6   0                 1
  13  OpenRead             2   6   0  k(4,B,B,B,B)   0  table=customers, root=6, iDb=0
  14  NullRow              0   0   0                 0  Set cursor 0 to a (pseudo) NULL row
  15  Rewind               0  23   0                 0  Rewind  ephemeral(ephemeral_index_where_sub_t4)
  16    Column             0   0   9                 0  r[9]=ephemeral(ephemeral_index_where_sub_t4).customer_id
  17    IsNull             9  22   0                 0  if (r[9]==NULL) goto 22
  18    SeekRowid          2   9  22                 0  if (r[9]!=cursor 2 for table customers.rowid) goto 22
  19    RowId              2   7   0                 0  r[7]=customers.rowid
  20    Column             2   1   8                 0  r[8]=customers.name
  21    Yield              1   0   0                 0
  22  Next                 0  16   0                 0
  23  EndCoroutine         1   0   0                 0
  24  OpenRead             3   4   0  k(4,B,B,B,B)   0  table=orders, root=4, iDb=0
  25  OpenRead             4   9   0  k(2,B)         0  index=idx_orders_customer, root=9, iDb=0
  26  InitCoroutine        1   0   2                 0
  27    Yield              1  43   0                 0
  28    Copy               7  12   0                 0  r[12]=r[7]
  29    IsNull            12  42   0                 0  if (r[12]==NULL) goto 42
  30    Affinity          12   1   0                 0  r[12..13] = C
  31    SeekGE             4  42  12                 0  key=[12..12]
  32      IdxGT            4  42  12                 0  key=[12..12]
  33      DeferredSeek     4   3   0                 0
  34      Column           3   3  14                 0  r[14]=orders.total_amount
  35      RealAffinity    14   0   0                 0
  36      Le              14  15  41  Binary         0  if r[14]<=r[15] goto 41
  37      Copy             8  10   0                 0  r[10]=r[8]
  38      Column           3   3  11                 0  r[11]=orders.total_amount
  39      RealAffinity    11   0   0                 0
  40      ResultRow       10   2   0                 0  output=r[10..11]
  41    Next               4  32   0                 0
  42  Goto                 0  27   0                 0
  43  Halt                 0   0   0                 0
  44  Transaction          0   1  11                 0  iDb=0 tx_mode=Read
  45  Integer           1000   5   0                 0  r[5]=1000
  46  Integer           1000  15   0                 0  r[15]=1000
  47  Goto                 0   1   0                 0
