sqlite/conformance/sqlite-sqltests/snapshot_tests/subqueries/snapshots/subqueries__cte-referenced-multiple-times.snap
---
source: subqueries.sqltest
expression: |-
  WITH order_totals AS (
          SELECT customer_id, sum(total_amount) AS total
          FROM orders
          GROUP BY customer_id
      )
      SELECT
          c.name,
          ot.total,
          (SELECT avg(total) FROM order_totals) AS avg_total
      FROM customers c
      JOIN order_totals ot ON ot.customer_id = c.id
      WHERE ot.total > (SELECT avg(total) FROM order_totals);
info:
  statement_type: WITH (CTE)
  tables:
  - customers
  - order_totals
  - orders
  - ot.customer_id
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCALAR SUBQUERY 1
|  `--SCAN order_totals
|     `--SCAN orders USING INDEX idx_orders_customer
|--SCALAR SUBQUERY 2
|  `--SCAN order_totals
|     `--SCAN orders USING INDEX idx_orders_customer
|--MATERIALIZE order_totals
|  `--SCAN orders USING INDEX idx_orders_customer
|--SCAN customers AS c
`--SEARCH ot USING INDEX ephemeral_subquery_t5 (customer_id=? AND total>?)

BYTECODE
addr  opcode                                       p1   p2   p3  p4            p5  comment
   0                              Init              0  171    0                 0  Start at 171
   1                              Once             54    0    0                 0  goto 54
   2                              BeginSubrtn       3    0    0                 0  r[3]=NULL
   3                              Null              0    1    0                 0  r[1]=NULL
   4                              InitCoroutine     4   42    5                 0
   5                              Null              0   12    0                 0  r[12]=NULL
   6                              Integer           0    9    0                 0  r[9]=0; clear group by abort flag
   7                              Null              0   10    0                 0  r[10]=NULL; initialize group by comparison registers to NULL
   8                              Gosub            16   38    0                 0  ; go to clear accumulator subroutine
   9                              OpenRead          0    4    0  k(4,B,B,B,B)   0  table=orders, root=4, iDb=0
  10                              OpenRead          1    9    0  k(2,B)         0  index=idx_orders_customer, root=9, iDb=0
  11                              Rewind            1   27    0                 0  Rewind index idx_orders_customer
  12                                DeferredSeek    1    0    0                 0
  13                                Column          1    0   14                 0  r[14]=idx_orders_customer.customer_id
  14                                Column          0    3   15                 0  r[15]=orders.total_amount
  15                                RealAffinity   15    0    0                 0
  16                                Compare        10   14    1  k(1, Binary)   0  r[10..10]==r[14..14]
  17                                Jump           18   22   18                 0  ; start new group if comparison is not equal
  18                                Gosub           7   31    0                 0  ; check if ended group had data, and output if so
  19                                Move           14   10    1                 0  r[10..10]=r[14..14]
  20                                IfPos           9   41    0                 0  r[9]>0 -> r[9]-=0, goto 41; check abort flag
  21                                Gosub          16   38    0                 0  ; goto clear accumulator subroutine
  22                                AggStep         0   15   12  sum            0  accum=r[12] step(r[15])
  23                                If              8   25    0                 0  if r[8] goto 25; don't emit group columns if continuing existing group
  24                                Column          1    0   11                 0  r[11]=idx_orders_customer.customer_id
  25                                Integer         1    8    0                 0  r[8]=1; indicate data in accumulator
  26                              Next              1   12    0                 1
  27                              Gosub             7   31    0                 0  ; emit row for final group
  28                              Goto              0   41    0                 0  ; group by finished
  29                              Integer           1    9    0                 0  r[9]=1
  30                            Return              7    0    0                 0
  31                            IfPos               8   33    0                 0  r[8]>0 -> r[8]-=0, goto 33; output group by row subroutine start
  32                          Return                7    0    0                 0
  33                          AggFinal              0   12    0  sum            0  accum=r[12]
  34                          Copy                 11    5    0                 0  r[5]=r[11]
  35                          Copy                 12    6    0                 0  r[6]=r[12]
  36                          Yield                 4    0    0                 0
  37                        Return                  7    0    0                 0
  38                        Null                    0   11   12                 0  r[11..12]=NULL; clear accumulator subroutine start
  39                        Integer                 0    8    0                 0  r[8]=0
  40                      Return                   16    0    0                 0
  41                      EndCoroutine              4    0    0                 0
  42                      Null                      0   18    0                 0  r[18]=NULL
  43                      Integer                   1   19    0                 0  r[19]=1; LIMIT counter
  44                      IfNot                    19   50    0                 0  if !r[19] goto 50
  45                      InitCoroutine             4    0    5                 0
  46                        Yield                   4   50    0                 0
  47                        Copy                    6   20    0                 0  r[20]=r[6]
  48                        AggStep                 0   20   18  avg            0  accum=r[18] step(r[20])
  49                      Goto                      0   46    0                 0
  50                      AggFinal                  0   18    0  avg            0  accum=r[18]
  51                      Copy                     18   17    0                 0  r[17]=r[18]
  52                      Copy                     17    1    0                 0  r[1]=r[17]
  53                    Return                      3    0    1                 0
  54                    Once                      107    0    0                 0  goto 107
  55                    BeginSubrtn                21    0    0                 0  r[21]=NULL
  56                    Null                        0    2    0                 0  r[2]=NULL
  57                    InitCoroutine              22   95   58                 0
  58                    Null                        0   30    0                 0  r[30]=NULL
  59                    Integer                     0   27    0                 0  r[27]=0; clear group by abort flag
  60                    Null                        0   28    0                 0  r[28]=NULL; initialize group by comparison registers to NULL
  61                    Gosub                      34   91    0                 0  ; go to clear accumulator subroutine
  62                    OpenRead                    2    4    0  k(4,B,B,B,B)   0  table=orders, root=4, iDb=0
  63                    OpenRead                    3    9    0  k(2,B)         0  index=idx_orders_customer, root=9, iDb=0
  64                    Rewind                      3   80    0                 0  Rewind index idx_orders_customer
  65                      DeferredSeek              3    2    0                 0
  66                      Column                    3    0   32                 0  r[32]=idx_orders_customer.customer_id
  67                      Column                    2    3   33                 0  r[33]=orders.total_amount
  68                      RealAffinity             33    0    0                 0
  69                      Compare                  28   32    1  k(1, Binary)   0  r[28..28]==r[32..32]
  70                      Jump                     71   75   71                 0  ; start new group if comparison is not equal
  71                      Gosub                    25   84    0                 0  ; check if ended group had data, and output if so
  72                      Move                     32   28    1                 0  r[28..28]=r[32..32]
  73                      IfPos                    27   94    0                 0  r[27]>0 -> r[27]-=0, goto 94; check abort flag
  74                      Gosub                    34   91    0                 0  ; goto clear accumulator subroutine
  75                      AggStep                   0   33   30  sum            0  accum=r[30] step(r[33])
  76                      If                       26   78    0                 0  if r[26] goto 78; don't emit group columns if continuing existing group
  77                      Column                    3    0   29                 0  r[29]=idx_orders_customer.customer_id
  78                      Integer                   1   26    0                 0  r[26]=1; indicate data in accumulator
  79                    Next                        3   65    0                 1
  80                    Gosub                      25   84    0                 0  ; emit row for final group
  81                    Goto                        0   94    0                 0  ; group by finished
  82                    Integer                     1   27    0                 0  r[27]=1
  83                  Return                       25    0    0                 0
  84                  IfPos                        26   86    0                 0  r[26]>0 -> r[26]-=0, goto 86; output group by row subroutine start
  85                Return                         25    0    0                 0
  86                AggFinal                        0   30    0  sum            0  accum=r[30]
  87                Copy                           29   23    0                 0  r[23]=r[29]
  88                Copy                           30   24    0                 0  r[24]=r[30]
  89                Yield                          22    0    0                 0
  90              Return                           25    0    0                 0
  91              Null                              0   29   30                 0  r[29..30]=NULL; clear accumulator subroutine start
  92              Integer                           0   26    0                 0  r[26]=0
  93            Return                             34    0    0                 0
  94            EndCoroutine                       22    0    0                 0
  95            Null                                0   36    0                 0  r[36]=NULL
  96            Integer                             1   37    0                 0  r[37]=1; LIMIT counter
  97            IfNot                              37  103    0                 0  if !r[37] goto 103
  98            InitCoroutine                      22    0   58                 0
  99              Yield                            22  103    0                 0
 100              Copy                             24   38    0                 0  r[38]=r[24]
 101              AggStep                           0   38   36  avg            0  accum=r[36] step(r[38])
 102            Goto                                0   99    0                 0
 103            AggFinal                            0   36    0  avg            0  accum=r[36]
 104            Copy                               36   35    0                 0  r[35]=r[36]
 105            Copy                               35    2    0                 0  r[2]=r[35]
 106          Return                               21    0    1                 0
 107          Once                                147    0    0                 0  goto 147
 108          OpenEphemeral                         4    1    0                 0  cursor=4 is_table=true
 109          Null                                  0   48    0                 0  r[48]=NULL
 110          Integer                               0   45    0                 0  r[45]=0; clear group by abort flag
 111          Null                                  0   46    0                 0  r[46]=NULL; initialize group by comparison registers to NULL
 112          Gosub                                52  144    0                 0  ; go to clear accumulator subroutine
 113          OpenRead                              5    4    0  k(4,B,B,B,B)   0  table=orders, root=4, iDb=0
 114          OpenRead                              6    9    0  k(2,B)         0  index=idx_orders_customer, root=9, iDb=0
 115          Rewind                                6  131    0                 0  Rewind index idx_orders_customer
 116            DeferredSeek                        6    5    0                 0
 117            Column                              6    0   50                 0  r[50]=idx_orders_customer.customer_id
 118            Column                              5    3   51                 0  r[51]=orders.total_amount
 119            RealAffinity                       51    0    0                 0
 120            Compare                            46   50    1  k(1, Binary)   0  r[46..46]==r[50..50]
 121            Jump                              122  126  122                 0  ; start new group if comparison is not equal
 122            Gosub                              43  135    0                 0  ; check if ended group had data, and output if so
 123            Move                               50   46    1                 0  r[46..46]=r[50..50]
 124            IfPos                              45  147    0                 0  r[45]>0 -> r[45]-=0, goto 147; check abort flag
 125            Gosub                              52  144    0                 0  ; goto clear accumulator subroutine
 126            AggStep                             0   51   48  sum            0  accum=r[48] step(r[51])
 127            If                                 44  129    0                 0  if r[44] goto 129; don't emit group columns if continuing existing group
 128            Column                              6    0   47                 0  r[47]=idx_orders_customer.customer_id
 129            Integer                             1   44    0                 0  r[44]=1; indicate data in accumulator
 130          Next                                  6  116    0                 1
 131          Gosub                                43  135    0                 0  ; emit row for final group
 132          Goto                                  0  147    0                 0  ; group by finished
 133          Integer                               1   45    0                 0  r[45]=1
 134        Return                                 43    0    0                 0
 135        IfPos                                  44  137    0                 0  r[44]>0 -> r[44]-=0, goto 137; output group by row subroutine start
 136      Return                                   43    0    0                 0
 137      AggFinal                                  0   48    0  sum            0  accum=r[48]
 138      Copy                                     47   41    0                 0  r[41]=r[47]
 139      Copy                                     48   42    0                 0  r[42]=r[48]
 140      MakeRecord                               41    2   53                 0  r[53]=mkrec(r[41..42]); for
 141      NewRowid                                  4   54    0                 0  r[54]=rowid
 142      Insert                                    4   53   54                 4  intkey=r[54] data=r[53]
 143    Return                                     43    0    0                 0
 144    Null                                        0   47   48                 0  r[47..48]=NULL; clear accumulator subroutine start
 145    Integer                                     0   44    0                 0  r[44]=0
 146  Return                                       52    0    0                 0
 147  OpenRead                                      7    6    0  k(4,B,B,B,B)   0  table=customers, root=6, iDb=0
 148  Rewind                                        7  170    0                 0  Rewind table customers
 149    Once                                      157    0    0                 0  goto 157
 150    OpenAutoindex                               8    0    0                 0  cursor=8
 151    Rewind                                      4  152    0                 0  Rewind  ephemeral()
 152      ColumnRange                               4    0   58  2              0  r[58..59]=ephemeral().customer_id..total
 153      RowId                                     4   60    0                 0  r[60]=ephemeral().rowid
 154      MakeRecord                               58    3   61                 0  r[61]=mkrec(r[58..60]); for ephemeral_subquery_t5
 155      IdxInsert                                 8   61   58                 0  key=r[61]
 156    Next                                        4  152    0                 0
 157    RowId                                       7   62    0                 0  r[62]=customers.rowid
 158    Copy                                        1   63    0                 0  r[63]=r[1]
 159    IsNull                                     63  169    0                 0  if (r[63]==NULL) goto 169
 160    SeekGT                                      8  169   62                 0  key=[62..63]
 161      IdxGT                                     8  169   62                 0  key=[62..62]
 162      DeferredSeek                              8    4    0                 0
 163      ColumnRange                               4    0   39  2              0  r[39..40]=ephemeral().customer_id..total
 164      Column                                    7    1   55                 0  r[55]=customers.name
 165      Column                                    8    1   56                 0  r[56]=ephemeral(ephemeral_subquery_t5).total
 166      Copy                                      2   57    0                 0  r[57]=r[2]
 167      ResultRow                                55    3    0                 0  output=r[55..57]
 168    Next                                        8  161    0                 0
 169  Next                                          7  149    0                 1
 170  Halt                                          0    0    0                 0
 171  Transaction                                   0    1   11                 0  iDb=0 tx_mode=Read
 172  Goto                                          0    1    0                 0
